# forage

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/forage/: __init__.py  auth.py  cli.py  exporter.py  parser.py  scraper.py
tests/: conftest.py  test_cli.py  test_exporter.py  test_models.py  test_parser.py  test_scraper.py
