[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forage"
version = "0.1.0"
description = "CLI tool to scrape posts, comments, and reactions from private Facebook groups"
requires-python = ">=3.10"
license = "MPL-2.0"
dependencies = [
    "click>=8.0",
    "playwright>=1.40",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "ty>=0.0.1a6",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
forage = "forage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/forage"]

[tool.ty]
# Astral's ty type checker configuration
[tool.ty.environment]
python-version = "3.10"
extra-paths = ["src"]
